# MangaNotify

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI_CD_GUIDE.md  DEPLOYMENT_WORKFLOW.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.unraid  GIT_MANAGEMENT.md  LICENSE  MIGRATION_PLAN.md  MangaNotify_Stable_Product_Roadmap.md  README.md  SECURITY.md  STACK_BRIEFING.md  TESTING.md  credentials.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  env.dev.example  env.example  mangabaka_gui.py  manganotify.py  pushover.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  server.py  test_runner.py
.github/workflows/: docker-publish.yml  docker.yml  pr-checks.yml  release-test.yml  test.yml
scripts/: dev-setup.py  hash_password.py  manage_workflows.py  run_tests.py  setup_cli.py
src/manganotify/: auth.py  main.py  server.py
src/manganotify/core/: config.py  crypto.py  deps.py  utils.py
src/manganotify/models/: schemas.py
src/manganotify/routers/: auth.py  health.py  notify.py  search.py  series.py  setup.py  watchlist.py
src/manganotify/services/: manga_api.py  notifications.py  poller.py  watchlist.py
src/manganotify/static/: index.html  setup.html
src/manganotify/static/js/: api.js  auth.js  keyboard.js  main.js  notifications-ui.js  quick-actions.js  settings.js  state.js  ui.js
src/manganotify/static/styles/: main.css
src/manganotify/storage/: json_store.py
static/: index.html
tests/: conftest.py  test_api.py  test_api_endpoints.py  test_auth.py  test_config.py  test_integration.py  test_integration_api_notifications.py  test_manga_api.py  test_notifications_simple.py  test_poller.py  test_rate_limit.py  test_real_api.py
tests/api/: test_watchlist_notifications.py
unraid/: manganotify.xml
